Система токенов доступа к строкам (Line Access Tokens): - Гранулярный контроль доступа: Реализованы LineAccessToken и LineAccessTracker для управления правами на чтение/редактирование строк файлов. - Обязательные токены: Чтение файла целиком запрещено, требуется указание диапазона строк. Токен выдается при чтении и требуется для редактирования. - Автослияние диапазонов: При чтении перекрывающихся или смежных диапазонов токены автоматически объединяются. Запрос внутри существующего диапазона возвращает старый токен. - Инвалидация при изменениях: Токены автоматически инвалидируются при структурных изменениях файла (вставка/удаление строк). - Перенос токенов: При move/rename файла токены переносятся на новый путь. - Построчный вывод: В листинге (list) токены выводятся построчно для удобства. - Интеграция с grep: Поиск автоматически выдает токены на найденные диапазоны строк. - LLM-friendly схемы: Полностью переработаны описания и схемы всех 12 инструментов с примерами, workflow и советами. - Удален AccessTracker: Заменен на новую систему LineAccessTracker. - Тесты: Все 53 теста актуализированы и проходят успешно.